<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_screen_layout_landscape"
            android:title="@string/emulation_screen_layout_landscape" />

        <item
            android:id="@+id/menu_screen_layout_single"
            android:title="@string/emulation_screen_layout_single" />

        <item
            android:id="@+id/menu_screen_layout_sidebyside"
            android:title="@string/emulation_screen_layout_sidebyside" />

        <item
            android:id="@+id/menu_screen_layout_hybrid"
            android:title="@string/emulation_screen_layout_hybrid" />

        <item
            android:id="@+id/menu_screen_layout_above_below"
            android:title="@string/emulation_screen_layout_above_below" />

        <item
            android:id="@+id/menu_screen_layout_custom"
            android:title="@string/emulation_screen_layout_custom" />

    </group>

    <item
        android:id="@+id/menu_adjust_custom_layout"
        android:title="@string/emulation_adjust_custom_layout"
        android:enabled="false" />

</menu>
